<resources>
    <string name="app_name">Union</string>

    <!--Title-->
    <string name="title_profile">Profile</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_add">Add</string>
    <string name="title_edit">Edit</string>
    <string name="title_vacations">Upcoming Orders</string>
    <string name="title_user_details">User Details</string>
    <string name="title_new_workload">New Order</string>
    <string name="title_edit_workload">Edit Order</string>

    <!--Hints-->
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_card">Card</string>
    <string name="hint_income">Income</string>
    <string name="hint_expense">Expense</string>
    <string name="hint_phone_optional">Phone (optional)</string>
    <string name="hint_comment_optional">Comments (visible only for Admins)</string>
    <string name="hint_name">Client Name</string>
    <string name="hint_place">Place</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_description">Description</string>
    <string name="hint_first_working_day">First Working Day</string>

    <!--Texts-->
    <string name="text_login">Login</string>
    <string name="text_blocked">Is Blocked</string>
    <string name="text_night_mode">Night Mode</string>
    <string name="text_save">Save</string>
    <string name="text_register">Register User</string>
    <string name="text_report_placeholder">Click "+" to add New Order</string>
    <string name="text_delete">Are you sure you want to delete?</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_forgot_password_click_here_to_send_reset_instructions"><u>Forgot password? Click here to send Reset Instruction</u></string>
    <string name="text_remind_at">Remind Me At</string>
    <string name="text_report_saved">Saved</string>
    <string name="text_user_created">User created</string>
    <string name="text_not_specified">Not specified</string>
    <string name="version_name" translatable="false">Union version %s</string>

    <!--Errors-->
    <string name="error_wrong_credentials">Wrong email or password</string>
    <string name="error_blocked">You have been blocked by administrator!</string>
    <string name="error_cant_be_empty">Field can\'t be empty</string>
    <string name="error_passwords_should_be_at_least_6_symbols">Password should be at least 6 symbols</string>
    <string name="error_passwords_should_equals">Password does not match the confirm password</string>
    <string name="error_check_date">Wrong current date on your phone</string>

    <!--Menu-->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_users">Users</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_vacations">Upcoming</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_filter">Filter</string>

    <!--Placeholder-->
    <string name="placeholder_no_vacations">No upcoming orders yet..</string>

    <!--Others-->
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="text_search">Search</string>
    <string name="day_taken" translatable="false">" - %s year: %d  day taken \n"</string>
    <string name="days_taken" translatable="false">" - %s year: %d  days taken \n"</string>
    <string name="text_minus" translatable="false">-</string>
    <string name="text_plus" translatable="false">+</string>
    <string name="text_change_password">Change password</string>
    <string name="text_add_project">Add project</string>
    <string name="text_copied">Copied</string>
    <string name="text_immediately_login">Immediately login</string>
    <string name="text_taxi">Taxi</string>
    <string name="text_children_age">Children: %d-%d years old</string>
    <string name="text_children_count_age">"Children: %d, %d-%d years old"</string>
    <string name="text_save_before_exit">Save changes before exit?</string>
    <string name="action_save">Save</string>
    <string name="text_income_expense">%d uah / %d uah</string>

    <!--arrays-->
    <string-array name="durations">
        <item>1h</item>
        <item>1.5h</item>
        <item>2h</item>
        <item>2.5h</item>
        <item>3h</item>
        <item>3.5h</item>
        <item>4h</item>
    </string-array>
    <string-array name="childrenCount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="notification_hours">
        <item>10:00</item>
        <item>12:00</item>
        <item>14:00</item>
        <item>16:00</item>
        <item>18:00</item>
        <item>20:00</item>
    </string-array>
</resources>
